k3s-stack.yaml
####################################################
##### Ajout d'un volume pour les données MySQL #####
####################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mysql
          image: mysql:9.6
          ports:
            - containerPort: 3306
          securityContext:
            capabilities:
              drop: ["ALL"]
              add: ["SYS_NICE", "SETGID", "SETUID", "CHOWN", "DAC_OVERRIDE"]
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: mysql-init
          configMap:
            name: mysql-init-script


########################################################
##### Exposition de MySQL à l'intérieur du cluster #####
########################################################
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306


##############################################
##### Déploiement de l'application Flask #####
##############################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: flask-app
          image: parzivalxix/alternance-tah-les-fous:3.1
          ports:
            - containerPort: 5000
          securityContext:
            capabilities:
              drop: ["ALL"]
              add: ["CHOWN", "SETGID", "SETUID"]
          startupProbe:
            tcpSocket:
              port: 5000
            failureThreshold: 12
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6


####################################################################
##### Exposition des conteneurs Flask à l'intérieur du cluster #####
####################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 5000


##########################################
##### Exposition extérieur via Nginx #####
##########################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 80
